環境変数の設定を改善し、APIキーのチェックを追加。.env.sampleを追加。

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
+# Environment variables
 .env
+
+# Python
 __pycache__/
-*.pyc
-.venv/ 
+*.py[cod]
+*$py.class
+.Python
+.venv/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db 
