--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ uvicorn==0.27.1
 aiohttp==3.9.3
 jinja2==3.1.3
 python-dotenv==1.0.1
-google-generativeai==0.3.2 
+google-generativeai==0.3.2
+pillow==11.1.0
+sse-starlette
+python-multipart 
